Fixes for the UI, started working on WebSockets

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+    }
+    maven {
+        setUrl("https://dl.bintray.com/kuon/java/")
     }
 }
 
