--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Web Socket Client
+    implementation("com.neovisionaries:nv-websocket-client:2.9")
+    // JSON handling
+    implementation("com.github.openjson:openjson:1.0.11")
+    // Phoenix Channel Client
+    implementation("ch.kuon.phoenix:channel:0.1.6")
 }
